# ITK-KrcahSheetnessImageFilter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
example/: CMakeLists.txt
example/Descoteaux/: CMakeLists.txt  main.cxx
example/DescoteauxMax/: CMakeLists.txt  main.cxx
example/DescoteauxWithScaling/: CMakeLists.txt  main.cxx
example/Krcah/: CMakeLists.txt
example/ModifiedSheetness/: CMakeLists.txt  main.cxx
include/: AutomaticSheetnessParameterEstimationImageFilter.h  AutomaticSheetnessParameterEstimationImageFilter.hxx  BroadcastingBinaryFunctorImageFilter.hxx  FrobeniusNormImageFilter.h  KrcahBackgroundFunctor.h  KrcahSheetnessFeatureGenerator.h  KrcahSheetnessFeatureGenerator.hxx  KrcahSheetnessImageFilter.h  ModifiedSheetnessImageFilter.h
lib/gtest-1.7.0/fused-src/gtest/: gtest.h
src/: BroadcastingBinaryFunctorImageFilter.h  BroadcastingBinaryFunctorImageFilter.hxx  CMakeLists.txt  DescoteauxSheetnessImageFilter.h  DescoteauxSheetnessImageFilterFemur.h  KrcahBackgroundFunctor.h  KrcahNotBackgroundFunctor.h  KrcahSheetnessFeatureGenerator.h  KrcahSheetnessFeatureGenerator.hxx  KrcahSheetnessFunctor.h  KrcahSheetnessImageFilter.h  MaximumAbsoluteValueImageFilter.h  TraceFunctor.h  TraceImageFilter.h  main.cxx  test_Sheetness.cxx
src/GraphCut3D/: ImageGraphCut3DFilter.h  ImageGraphCut3DFilter.hxx
src/GraphCut3D/Examples/: CMakeLists.txt  ImageGraphCut3DSegmentationExample.cpp  KrcahGraphcut.cpp  KrcahSplit.cpp  LabelImage.cpp  LabelImage.h
test/: CMakeLists.txt  test_ModifiedSheetnessFunctor.cxx
